# TableDiffusion

./: .gitignore  README.md  pyproject.toml
examples/: example_training_run.ipynb
tablediffusion/config/: __init__.py  configs.py
tablediffusion/metrics/: __init__.py  metrics.py
tablediffusion/models/: __init__.py  architectures.py  dp_attention_gan.py  dp_attention_vae.py  dp_auto_gan.py  dp_wgan.py  pate_gan.py  saint_ae.py  table_diffusion.py
tablediffusion/utilities/: __init__.py  data_utils.py  privacy_utils.py  saint_utils.py  utils.py
tablediffusion/vis/: __init__.py  visualisations.py
